--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
+  "builds": [
+    {
+      "src": "dist/ReceiptGenerator/**",
+      "use": "@vercel/static"
+    }
   ]
 }
